# ChainMind-OS

./: .gitignore  LICENSE  README.md  rl_log.txt
ai_workflow/: .gitignore  README.md  activate.sh  config.yaml  pyproject.toml  return_schema.py  utils.py
ai_workflow/ai_agents/: README.md  main.py  test.py
ai_workflow/ai_agents/agentic_land/: base_expert.py  dao_expert.py  defi_expert.py  did_expert.py  nft_expert.py
ai_workflow/ai_agents/layer_1/: agents.py
ai_workflow/ai_agents/layer_2/: orchestrator.py
ai_workflow/ai_agents/layer_3/: smart_contracts_coder_expert.py
ai_workflow/onchain_python/: README.MD  config.yaml  main.py  members.py  orchestrator.py  rl_updation_rule.py  train.py  utils.py
api/: README.md  run.py
api/src/: __init__.py
api/src/routes/: agent_routes.py
api/src/utils/: global_response.py  utils.py
contracts/: .env.example  README.md  hardhat.config.js  package.json
contracts/contracts/: ChainMindOS.sol
contracts/scripts/: deploy.js
contracts/test/: ChainMindOS.js
onchain_ai_agents/: Cargo.toml  README.md
onchain_ai_agents/src/: main.rs
web/: README.md  package.json
web/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
web/src/app/agents/: page.tsx
web/src/components/footer/: index.module.css  index.tsx
web/src/config/: config.json
web/src/contexts/: AppContext.tsx
web/src/hooks/: useCreateNodeAndEdges.tsx  useGetResponse.tsx  useHandleTextAreaSize.tsx  usePolling.tsx  usePostResponse.tsx  utils.tsx
web/src/styles/: globals.css  page.module.css
web/src/types/: index.ts
(+39 files in other folders)
